tests/invalid_inputs/sema/invalid_code_after_ret.cpp
// make sure that even dead code is semantically checked
void f() {
	return;
	a = 5;
}
